# agent-messaging

./: .editorconfig  .env.example  .env.test  BUG_FIX_SUMMARY.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  MESSAGING_WORKFLOW_EXPLANATION.md  README.md  RELEASE_NOTES.md  docker-compose.test.yml  docker-compose.yml  pyproject.toml  pytest.ini
.github/instructions/: memory-management.instructions.md
agent_messaging/: __init__.py  client.py  config.py  exceptions.py  models.py
agent_messaging/database/: __init__.py  manager.py
agent_messaging/database/repositories/: __init__.py  agent.py  base.py  meeting.py  message.py  organization.py  session.py
agent_messaging/handlers/: __init__.py  events.py  registry.py  types.py
agent_messaging/messaging/: __init__.py  async_conversation.py  conversation.py  meeting.py  one_way.py  sync_conversation.py
agent_messaging/utils/: __init__.py  locks.py  timeouts.py
docs/: api-reference.md  quick-start.md
docs/architecture/: handler-systems.md
docs/archive/: DOCUMENTATION_STRUCTURE.md  PLANNING_COMPLETE.md
docs/features/: message-notifications.md
docs/plan/: 00-implementation-plan.md  01-architecture.md  02-database-schema.md  03-api-design.md  04-state-machines.md  05-testing-strategy.md  CHECKLIST.md  README.md  handler-refactor.md  meeting-turn-locking.md
docs/plan/v2/: 00-refactor-overview.md  01-critical-bug-fixes.md  02-essential-query-methods.md  03-handler-architecture-refactor.md  04-advanced-features.md  05-testing-documentation.md  CODE_REVIEW_SUMMARY.md  PROGRESS.md  README.md
docs/ref/: postgresql_manager_example.md
examples/: 01_notification_system.py  02_interview.py  03_task_processing.py  04_brainstorming_meeting.py  05_message_notifications.py
migrations/: 001_initial_schema.sql  002_query_indexes.sql  003_metadata_indexes.sql  004_fulltext_search.sql  005_performance_indexes.sql
scripts/: README.md  cleanup_db.py  init_db.py  recreate_db.py  run_tests.py  start_postgres.py  test_client.py
tests/: __init__.py  conftest.py  helpers.py  test_client.py  test_config.py  test_conversation.py  test_global_handlers.py  test_handler_routing.py  test_handler_types.py  test_handlers.py  test_lock_mechanisms.py  test_meeting_events.py  test_meeting_manager.py  test_meeting_timeout.py  test_meeting_wait_for_turn.py  test_message_notification.py  test_messaging.py  test_metadata_filtering.py  test_models.py  test_one_way_messaging.py  test_one_way_queries.py  test_repositories.py  test_utils.py
