[tool.poetry]
name = "agent-messaging"
version = "0.1.0"
description = "Python SDK for AI agent communication with messaging protocol"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "agent_messaging"}]

[tool.poetry.dependencies]
python = "^3.11"
psqlpy = "^0.11.0"
pydantic = "^2.0"
pydantic-settings = "^2.0"
python-dotenv = "^1.0"

[tool.poetry.dev-dependencies]
pytest = "^7.4"
pytest-asyncio = "^0.21"
pytest-cov = "^4.1"
black = "^23.0"
mypy = "^1.5"
ruff = "^0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.ruff]
line-length = 100
target-version = "py311"