[tool.poetry]
name = "agent-messaging"
version = "0.3.0"
description = "Python SDK for AI agent communication with messaging protocol"
authors = ["Ganzzi <boinguyen9701@gmail.com>"]
maintainers = ["Ganzzi <boinguyen9701@gmail.com>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/ganzzi/agent-messaging"
repository = "https://github.com/ganzzi/agent-messaging"
documentation = "https://agent-messaging.readthedocs.io/"
keywords = [
    "ai",
    "agents",
    "messaging",
    "communication",
    "async",
    "postgresql",
    "sdk",
    "conversations",
    "meetings",
    "one-way",
    "synchronous",
    "asynchronous",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Communications",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Distributed Computing",
    "Framework :: AsyncIO",
    "Typing :: Typed",
]
packages = [{ include = "agent_messaging" }]
include = ["CHANGELOG.md", "LICENSE", "README.md"]
exclude = [
    "tests/",
    "docs/",
    "examples/",
    ".github/",
    ".env*",
    "*.pyc",
    "__pycache__/",
]

[tool.poetry.dependencies]
python = "^3.11"
psqlpy = "^0.11.0"
pydantic = "^2.0"
pydantic-settings = "^2.0"

[tool.poetry.dev-dependencies]
pytest = "^7.4"
pytest-asyncio = "^0.21"
pytest-cov = "^4.1"
black = "^23.0"
mypy = "^1.5"
ruff = "^0.1"
python-dotenv = "^1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "psqlpy>=0.11.6",
    "pydantic>=2.12.3",
    "pydantic-settings>=2.11.0",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "python-dotenv>=1.1.1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.ruff]
line-length = 100
target-version = "py311"
